# substrate_offchain_worker

node/: Cargo.toml
node/src/: service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
